--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>eu.franzoni</groupId>
     <artifactId>quickrepo</artifactId>
-    <version>1.1</version>
+    <version>1.3-SNAPSHOT</version>
     <build>
         <plugins>
             <plugin>
@@ -39,6 +39,13 @@
         </dependency>
     </dependencies>
 
+    <!--<distributionManagement>-->
+        <!--<repository>-->
+            <!--<id>nexus</id>-->
+            <!--<name>localmaven</name>-->
+            <!--<url>http://mavenrepo.lan/nexus/content/repositories/releases</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
