--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
     <groupId>eu.franzoni</groupId>
     <artifactId>jquickrepo</artifactId>
@@ -24,7 +30,7 @@
     <scm>
         <url>https://bitbucket.org/Alan/jquickrepo</url>
         <connection>scm:hg:https://bitbucket.org/Alan/jquickrepo</connection>
-        <developerConnection>scm:hg:scm:hg:https://Alan@bitbucket.org/Alan/jquickrepo</developerConnection>
+        <developerConnection>scm:hg:ssh://hg@bitbucket.org/Alan/jquickrepo</developerConnection>
     </scm>
 
     <developers>
@@ -40,10 +46,25 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
